{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 30,
  "lineage": "6ad637ce-60e2-fb52-9d8f-0882766b2263",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027e69f2465d1d137",
            "domain": "vpc",
            "id": "eipalloc-027e69f2465d1d137",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-228-41-61.compute-1.amazonaws.com",
            "public_ip": "3.228.41.61",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257248662189:internet-gateway/igw-0395a65e8c5497c92",
            "id": "igw-0395a65e8c5497c92",
            "owner_id": "257248662189",
            "tags": {
              "Name": "teamtwo-IGW}"
            },
            "tags_all": {
              "Name": "teamtwo-IGW}",
              "env": "teamtwo"
            },
            "vpc_id": "vpc-091c995f255ee2cee"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-027e69f2465d1d137",
            "connectivity_type": "public",
            "id": "nat-0fe0f14cefb7c4053",
            "network_interface_id": "eni-025b369b5d02f3d96",
            "private_ip": "10.0.0.58",
            "public_ip": "3.228.41.61",
            "subnet_id": "subnet-029cd8d55e7710d69",
            "tags": {
              "Name": "teamtwo-nat"
            },
            "tags_all": {
              "Name": "teamtwo-nat",
              "env": "teamtwo"
            }
          },
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-012ba66ed61eedb231080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fe0f14cefb7c4053",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-012ba66ed61eedb23",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_nat_gateway.main_nat",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0395a65e8c5497c92",
            "id": "r-rtb-0dbfc217e7d5065e91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dbfc217e7d5065e9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257248662189:route-table/rtb-012ba66ed61eedb23",
            "id": "rtb-012ba66ed61eedb23",
            "owner_id": "257248662189",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "teamtwo-private-rt"
            },
            "tags_all": {
              "Name": "teamtwo-private-rt",
              "env": "teamtwo"
            },
            "timeouts": null,
            "vpc_id": "vpc-091c995f255ee2cee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257248662189:route-table/rtb-0dbfc217e7d5065e9",
            "id": "rtb-0dbfc217e7d5065e9",
            "owner_id": "257248662189",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "teamtwo-public-rt"
            },
            "tags_all": {
              "Name": "teamtwo-public-rt",
              "env": "teamtwo"
            },
            "timeouts": null,
            "vpc_id": "vpc-091c995f255ee2cee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d99eeb6ab91acdd",
            "route_table_id": "rtb-012ba66ed61eedb23",
            "subnet_id": "subnet-04f6817a488b1a931"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ddd325c3e22691f0",
            "route_table_id": "rtb-012ba66ed61eedb23",
            "subnet_id": "subnet-03ce18577f014bb9b"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db717f3eaa6c550f",
            "route_table_id": "rtb-0dbfc217e7d5065e9",
            "subnet_id": "subnet-029cd8d55e7710d69"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e0b67c0acc15eea1",
            "route_table_id": "rtb-0dbfc217e7d5065e9",
            "subnet_id": "subnet-0b12e45dc6639a0a7"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257248662189:security-group/sg-0f3135be6e191f3e9",
            "description": "security group for the client application load balancer",
            "egress": [],
            "id": "sg-0f3135be6e191f3e9",
            "ingress": [],
            "name": "teamtwo-SG20230306184647589900000006",
            "name_prefix": "teamtwo-SG",
            "owner_id": "257248662189",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "teamtwo-SG"
            },
            "tags_all": {
              "Name": "teamtwo-SG",
              "env": "teamtwo"
            },
            "timeouts": null,
            "vpc_id": "vpc-091c995f255ee2cee"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "main_allow_80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTP traffic",
            "from_port": 80,
            "id": "sgrule-2109071543",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0f3135be6e191f3e9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "main_allow_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow any outbound traffic",
            "from_port": 0,
            "id": "sgrule-667485150",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0f3135be6e191f3e9",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257248662189:subnet/subnet-04f6817a488b1a931",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f6817a488b1a931",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "257248662189",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "teamtwo-private-us-east-1a"
            },
            "tags_all": {
              "Name": "teamtwo-private-us-east-1a",
              "env": "teamtwo"
            },
            "vpc_id": "vpc-091c995f255ee2cee"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257248662189:subnet/subnet-03ce18577f014bb9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ce18577f014bb9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "257248662189",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "teamtwo-private-us-east-1b"
            },
            "tags_all": {
              "Name": "teamtwo-private-us-east-1b",
              "env": "teamtwo"
            },
            "vpc_id": "vpc-091c995f255ee2cee"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257248662189:subnet/subnet-029cd8d55e7710d69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029cd8d55e7710d69",
            "ipv6_cidr_block": "2600:1f18:5c73:b600::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-09b8dbf64f6788378",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "257248662189",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "teamtwo-public-us-east-1a"
            },
            "tags_all": {
              "Name": "teamtwo-public-us-east-1a",
              "env": "teamtwo"
            },
            "vpc_id": "vpc-091c995f255ee2cee"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257248662189:subnet/subnet-0b12e45dc6639a0a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b12e45dc6639a0a7",
            "ipv6_cidr_block": "2600:1f18:5c73:b601::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0580c6f7c75123515",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "257248662189",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "teamtwo-public-us-east-1b"
            },
            "tags_all": {
              "Name": "teamtwo-public-us-east-1b",
              "env": "teamtwo"
            },
            "vpc_id": "vpc-091c995f255ee2cee"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:257248662189:vpc/vpc-091c995f255ee2cee",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-001527bb67e85d9a3",
            "default_route_table_id": "rtb-0509427bd9e974f9d",
            "default_security_group_id": "sg-09b79e83309485dda",
            "dhcp_options_id": "dopt-0bc6fdc94cd01afdd",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-091c995f255ee2cee",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-094f5662fe2d322f8",
            "ipv6_cidr_block": "2600:1f18:5c73:b600::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0509427bd9e974f9d",
            "owner_id": "257248662189",
            "tags": {
              "Name": "teamtwo-VPC"
            },
            "tags_all": {
              "Name": "teamtwo-VPC",
              "env": "teamtwo"
            }
          }
        }
      ]
    }
  ]
}